<resources>
    <string name="app_name">LivingParchment</string>
    <string name="shared_action_bar_settings_name">Settings</string>
    <string name="activity_add_book_isbn_input_text">Enter Isbn…</string>
    <string name="activity_add_book_lookup">Add!</string>
    <string name="status_internal_server_error">Internal server error</string>
    <string name="status_book_not_found">Book not found :/</string>
    <string name="activity_add_book_added">Book added!</string>
    <string name="activity_delete_book_deleted">Book deleted!</string>
    <string name="activity_delete_book_delete_button">Delete!</string>
    <string name="activity_query_label_query_type">Query type</string>
    <string name="activity_query_label_attribute">Attribute</string>
    <string name="activity_query_hint_query_input">Query input…</string>
    <string name="activity_query_button_query">Execute Query</string>

    <string name="fragment_book_detail_title">Title</string>
    <string name="fragment_book_detail_authors">Authors</string>
    <string name="fragment_book_detail_isbn">ISBN</string>
    <string name="fragment_book_detail_language">Language</string>
    <string name="fragment_book_detail_page_count">Page count</string>
    <string name="fragment_book_detail_publisher">Publisher</string>
    <string name="fragment_book_detail_published">Published at</string>
    <string name="fragment_book_detail_genre">Genres</string>
    <string name="fragment_book_detail_location">Location</string>
    <string name="fragment_book_detail_description">Description</string>
    <string name="activity_query_title">Query</string>
    <string name="activity_add_book_title">Add book</string>
    <string name="activity_delete_book_title">Delete book</string>

    <string-array name="test_dummy_array">
        <item>First item</item>
        <item>Second item</item>
        <item>Third item</item>
    </string-array>

    <string-array name="query_attributes">
        <item>isbn</item>
        <item>title</item>
        <item>language</item>
        <item>page_count</item>
        <item>publisher</item>
        <item>published</item>
        <item>authors</item>
        <item>genre</item>
        <item>description</item>
        <item>location</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="activity_settings_category_server_title">Server settings</string>
    <string name="activity_settings_category_server_address_title">Server address</string>
    <string name="activity_settings_category_server_address_summary">Using \'%s\' as server address.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_add_book_location_label">Location</string>
    <string name="activity_add_book_no_location">No location</string>
    <string name="activity_add_location_locations_label">All locations</string>
    <string name="add_location_add_button">Add!</string>
    <string name="activity_add_location_name_textfield_hint">Name…</string>
    <string name="activity_add_location_description_textfield_hint">Description…</string>
    <string name="activity_manage_book_location_delete">Delete</string>
    <string name="editable_list_editable_field_hint">Value…</string>
    <string name="fragment_book_detail_edit_action_bar">Edit</string>
    <string name="fragment_book_detail_edit_delete_location">No location</string>
    <string name="fragment_book_detail_edit_title">Edit book</string>
    <string name="fragment_book_list_title">Query Results</string>
    <string name="fragment_book_detail_fragment_title">Book Information</string>
    <string name="activity_settings_category_server_password_title">Password</string>
    <string name="activity_settings_category_server_password_summary">I am using \'%s\' as my password.</string>
    <string name="activity_settings_category_server_username_title">Username</string>
    <string name="activity_settings_category_server_username_summary">I am using the username \'%s\'.</string>
    <string name="fragment_book_list_view_preview_image_description">Preview image</string>
    <string name="activity_manage_book_location_edit">Edit</string>
    <string name="add_location_patch_button">Patch!</string>
    <string name="activity_manage_book_location_delete_title">Do you really want to delete the location?</string>
    <string name="activity_manage_book_title">Manage locations</string>
    <string name="add_location_dialog_title">Add new location</string>
    <string name="add_location_patch_dialog_title">Edit location</string>
</resources>
