<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/activity_settings_category_server_title">

        <EditTextPreference
            android:defaultValue="http://192.168.188.72:8080"
            android:key="settings_server_address"
            android:summary="@string/activity_settings_category_server_address_summary"
            android:title="@string/activity_settings_category_server_address_title" />

        <EditTextPreference
            android:defaultValue="Al"
            android:key="settings_server_username"
            android:summary="@string/activity_settings_category_server_username_summary"
            android:title="@string/activity_settings_category_server_username_title" />
        <EditTextPreference
            android:defaultValue="Al"
            android:key="settings_server_password"
            android:summary="@string/activity_settings_category_server_password_summary"
            android:title="@string/activity_settings_category_server_password_title" />
    </PreferenceCategory>
</PreferenceScreen>