<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.query.BookQueryActivity">

    <Spinner
        android:id="@+id/query_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button_execute_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:entries="@array/test_dummy_array" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_query_label_query_type"
        app:layout_constraintBottom_toTopOf="@+id/query_type_spinner"
        app:layout_constraintEnd_toEndOf="@+id/query_type_spinner"
        app:layout_constraintStart_toStartOf="@+id/query_type_spinner" />

    <Spinner
        android:id="@+id/attribute_name_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:entries="@array/query_attributes"
        app:layout_constraintBaseline_toBaselineOf="@+id/query_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/query_type_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_query_label_attribute"
        app:layout_constraintBottom_toTopOf="@+id/attribute_name_spinner"
        app:layout_constraintEnd_toEndOf="@+id/attribute_name_spinner"
        app:layout_constraintStart_toStartOf="@+id/attribute_name_spinner" />

    <EditText
        android:id="@+id/query_input_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/activity_query_hint_query_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_name_spinner" />

    <Button
        android:id="@+id/button_execute_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_query_button_query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/query_input_field" />

</android.support.constraint.ConstraintLayout>